# django-microservice-request

./: .editorconfig  .flake8  .gitignore  CHANGELOG  CHANGELOG.rst  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: codecov.yml  docs.yml  main.yml  release.yml  tests.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  intro.rst
microservice_request/: decorators.py  exceptions.py  middleware.py  permissions.py  services.py  test.py
tests/: settings.py  test_middleware.py  test_permissions.py  test_services.py  urls.py
