[metadata]
name = django-microservice-request
version = 0.1
description = A Django app for set connections between microservices.
long_description = file: README.rst
url = https://github.com/bandirom/django-microservice-request
author = Nazarii Romanchenko
author_email = bandirom@ukr.net
license = BSD-3-Clause
python_requires >= 3.8
classifiers =
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 3.1
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: Django
	Framework :: Django :: 2.1
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	Framework :: Django :: 3.1
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
	requests
	django >= 2.1
	djangorestframework
