[metadata]
name = django-microservice-request
version = 0.5.3
author = Nazarii Romanchenko
author_email = bandirom@ukr.net
description = Django app for send sync requests to microservices or external APIs.
long_description = file:docs/source/intro.rst
long_description_content_type = text/x-rst
url = https://github.com/bandirom/django-microservice-request
license = BSD-3-Clause
python_requires >= 3.8
classifiers =
	Environment :: Web Environment
	Framework :: Django
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
    Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
	requests
	django >= 2.1
	djangorestframework
